# yatzy

./: CMakeLists.txt  README.org
src/: CMakeLists.txt  ascii_dice.hpp  dice_set.cpp  dice_set.hpp  io.cpp  io.hpp  main.cpp  player.cpp  player.hpp  rules.hpp  yatzy.cpp  yatzy.hpp
test/: CMakeLists.txt  dice_set_tests.cpp  player_tests.cpp  yatzy_add_test.cmake
